resources/err.txt
/home/csevirus/project/blindcode/resources/code.cpp:1:1: error: expected unqualified-id before ‘+’ token
 + "\n"
 ^
